[plugin-web-app] Migrate listener cleaning browser log to new architecture